<resources>
    <!-- app名称 -->
    <string name="app_name"		> 	</string>

    <!-- 各界面名称 -->
    <string name="main_name"	    ></string>
    <string name="login_name"	    ></string>
    <string name="server_name"   ></string>
    <string name="register_name" ></string>

    <!-- 登录界面 -->
    <string name="login_input_number"	>电话号码	</string>
    <string name="login_input_password"	>密码	    </string>

    <!-- 主界面 -->
    <string name="main_user_name"		>此次需调用数据库</string>
    <string name="main_address"			>此处需调用GPS	</string>
    <string name="main_img"				>IMG			</string>
    <string name="main_change"			>切换手环号		</string>
    <string name="main_change_activity"	>>				</string>
    <string name="main_health"			>健康状况		</string>
    <string name="main_gps"				>定位			</string>
    <string name="main_emotion"			>情绪检测		</string>

    <!-- 注册界面 -->
    <string name="register_return"       >＜               </string>
    <string name="register_send_message">获取验证码        </string>
</resources>
